--- a/nextflow.config
+++ b/nextflow.config
@@ -13,11 +13,6 @@ params {
     // Input options
     input                      = null
 
-    // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes'
-    igenomes_ignore            = false
-
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
@@ -47,9 +42,9 @@ params {
 
     // Max resource options
     // Defaults only, expecting to be overwritten
-    max_memory                 = '128.GB'
+    max_memory                 = '64.GB'
     max_cpus                   = 16
-    max_time                   = '240.h'
+    max_time                   = '24.h'
 
 }
 
@@ -76,6 +71,7 @@ profiles {
     debug { process.beforeScript = 'echo $HOSTNAME' }
     conda {
         params.enable_conda    = true
+        conda.cacheDir   = "$HOME/.sysmiome/itsflow/cache/conda"
         docker.enabled         = false
         singularity.enabled    = false
         podman.enabled         = false
@@ -93,6 +89,7 @@ profiles {
     singularity {
         singularity.enabled    = true
         singularity.autoMounts = true
+        singularity.cacheDir   = "$HOME/.sysmiome/itsflow/cache/singularity"
         docker.enabled         = false
         podman.enabled         = false
         shifter.enabled        = false
@@ -123,12 +120,6 @@ profiles {
     test_full { includeConfig 'conf/test_full.config' }
 }
 
-// Load igenomes.config if required
-if (!params.igenomes_ignore) {
-    includeConfig 'conf/igenomes.config'
-} else {
-    params.genomes = [:]
-}
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
 // The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
