--- a/nextflow.config
+++ b/nextflow.config
@@ -118,6 +118,8 @@ profiles {
     }
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
+// Kasetsart cluster
+    sysbio    { includeConfig 'conf/sysbio.config'} 
 }
 
 
