--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,7 @@
 ----------------------------------------------------------------------------------------
 */
 
+
 // Global default params, used in configs
 params {
 
@@ -76,7 +77,6 @@ profiles {
         singularity.enabled    = false
         podman.enabled         = false
         shifter.enabled        = false
-        charliecloud.enabled   = false
     }
     docker {
         docker.enabled         = true
@@ -84,7 +84,6 @@ profiles {
         singularity.enabled    = false
         podman.enabled         = false
         shifter.enabled        = false
-        charliecloud.enabled   = false
     }
     singularity {
         singularity.enabled    = true
@@ -93,14 +92,12 @@ profiles {
         docker.enabled         = false
         podman.enabled         = false
         shifter.enabled        = false
-        charliecloud.enabled   = false
     }
     podman {
         podman.enabled         = true
         docker.enabled         = false
         singularity.enabled    = false
         shifter.enabled        = false
-        charliecloud.enabled   = false
     }
     shifter {
         shifter.enabled        = true
@@ -109,17 +106,9 @@ profiles {
         podman.enabled         = false
         charliecloud.enabled   = false
     }
-    charliecloud {
-        charliecloud.enabled   = true
-        docker.enabled         = false
-        singularity.enabled    = false
-        podman.enabled         = false
-        shifter.enabled        = false
-    }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
+    test        { includeConfig 'conf/test.config'  } 
 // Kasetsart cluster
-    sysbio    { includeConfig 'conf/sysbio.config'} 
+    sysbiome    { includeConfig 'conf/sysbiome.config'} 
 }
 
 
@@ -161,8 +150,8 @@ manifest {
     homePage        = 'https://github.com/nf-core/itsbreeze'
     description     = 'ITS analysis pipeline'
     mainScript      = 'main.nf'
-    nextflowVersion = '!>=21.10.3'
-    version         = '1.0dev'
+    nextflowVersion = '>=20.10.0'
+    version         = '0.1dev'
 }
 
 // Load modules.config for DSL2 module specific options
