Add remote test file

--- a/nextflow.config
+++ b/nextflow.config
@@ -107,8 +107,9 @@ profiles {
         charliecloud.enabled   = false
     }
     test        { includeConfig 'conf/test.config'  } 
+    test_local  { includeConfig 'conf/test_local.config'  } 
 // Kasetsart cluster
-    sysbiome    { includeConfig 'conf/sysbiome.config'} 
+    sysbiomics    { includeConfig 'conf/sysbiomics.config'} 
 }
 
 
