--- a/conf/sysbiomics.config
+++ b/conf/sysbiomics.config
@@ -1,13 +1,14 @@
+params {
+    max_cpus   = 128
+    max_memory = '256.GB'
+    max_time   = '30.h'
+}
+
 process {
 
 	executor = 'pbspro'
 	cpus = 2
 	mem = 8.GB
-
-	withLabel: process_medium {
-		cpus = 30 
-		memory = 32.GB
-	}
 
 	withLabel: memory_medium {
 		cpus = 16 
