--- a/conf/test_local.config
+++ b/conf/test_local.config
@@ -22,5 +22,5 @@ params {
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = 'https://raw.githubusercontent.com/yumyai/test-datasets/itsbreeze/samplesheet.csv'
+    input  = 'test_dat/sample_sheet.csv'
 }
