--- a/nextflow.config
+++ b/nextflow.config
@@ -107,6 +107,7 @@ profiles {
         charliecloud.enabled   = false
     }
     test        { includeConfig 'conf/test.config'  } 
+    test_local  { includeConfig 'conf/test_local.config'  } 
 // Kasetsart cluster
     sysbiome    { includeConfig 'conf/sysbiome.config'} 
 }
